--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "crypt_blowfish"]
 	path = crypt_blowfish
-	url = https://github.com/openwall/crypt_blowfish
+	url = https://github.com/openwall/crypt_blowfish.git
